tests/ui/bad_crate_path.stderr
error[E0433]: failed to resolve: could not find `missing` in `to`
 --> tests/ui/bad_crate_path.rs:8:28
  |
8 | #[linkme(crate = path::to::missing)]
  |                            ^^^^^^^ could not find `missing` in `to`

error[E0433]: failed to resolve: could not find `missing` in `to`
  --> tests/ui/bad_crate_path.rs:15:28
   |
15 | #[linkme(crate = path::to::missing)]
   |                            ^^^^^^^ could not find `missing` in `to`

error[E0433]: failed to resolve: could not find `missing` in `to`
 --> tests/ui/bad_crate_path.rs:7:1
  |
7 | #[distributed_slice]
  | ^^^^^^^^^^^^^^^^^^^^ not found in `path::to::missing`
  |
  = note: this error originates in the attribute macro `distributed_slice` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this struct
  |
1 | use linkme::DistributedSlice;
  |
help: if you import `DistributedSlice`, refer to it directly
  |
7 - #[distributed_slice]
  |

error[E0433]: failed to resolve: could not find `missing` in `to`
  --> tests/ui/bad_crate_path.rs:14:1
   |
14 | #[distributed_slice(SLICE2)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `path::to::missing`
   |
   = note: this error originates in the attribute macro `distributed_slice` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this struct
   |
1  | use linkme::DistributedSlice;
   |
help: if you import `DistributedSlice`, refer to it directly
   |
14 - #[distributed_slice(SLICE2)]
   |
